plugins {
    id 'java'
}

group 'uk.ac.hutton.germinate-importer'
version '4.7.4'

compileJava.options.encoding = 'UTF-8'
sourceCompatibility = 21

repositories {
    maven {
        url 'https://repo.spring.io/plugins-release/'
    }
    maven {
        url 'https://maven.imagej.net/content/repositories/public/'
    }
    maven {
        url 'https://nexus.geomatys.com/repository/geotoolkit/'
    }
    maven {
        url 'https://repo.osgeo.org/repository/release/'
    }
    mavenCentral()
}

dependencies {
    implementation fileTree(dir: 'lib', include: ['*.jar'])

    implementation 'cisd:jhdf5:19.04.0'
    implementation 'org.jooq:jooq:3.16.18'
    implementation 'com.google.code.gson:gson:2.10'
    implementation 'mysql:mysql-connector-java:8.0.33'
    implementation 'org.dhatim:fastexcel-reader:0.14.0'

    implementation 'javax.media:jai_core:1.1.3'
    implementation 'org.geotools:gt-shapefile:27.2'

    // Only needed for local debug
    implementation 'org.flywaydb:flyway-core:6.5.7'
}
